--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v4
 
+      - name: 配置 GitHub Pages
+        uses: actions/configure-pages@v5
+
       - name: 设置Node.js环境
         uses: actions/setup-node@v4
         with:
